--- a/app/src/main/res/layout/fragment_list_entry.xml
+++ b/app/src/main/res/layout/fragment_list_entry.xml
@@ -7,4 +7,11 @@
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentEditText"
+        android:layout_gravity="center_horizontal|top"
+        android:text="s" />
+
 </FrameLayout>
