--- a/app/src/main/res/layout/fragment_list_entry.xml
+++ b/app/src/main/res/layout/fragment_list_entry.xml
@@ -1,20 +1,69 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.virginia.cs.cs4720androidproject.ListEntryFragment"
     android:id="@+id/fragment_layout">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentEditText1"
         android:text=""
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_marginLeft="255dp"
+        android:layout_marginStart="255dp"
+        android:layout_marginTop="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentEditText2"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/fragmentEditText1"
+        android:layout_alignStart="@+id/fragmentEditText1" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragmentEditText1_label"
+        android:id="@+id/fragmentLabel1"
+        android:layout_alignBottom="@+id/fragmentEditText2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragmentEditText2_label"
+        android:id="@+id/fragmentLabel2"
+        android:layout_alignBottom="@+id/fragmentEditText1"
+        android:layout_alignRight="@+id/fragmentLabel1"
+        android:layout_alignEnd="@+id/fragmentLabel1" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentSpinner"
+        android:layout_below="@+id/fragmentEditText1"
+        android:layout_alignLeft="@+id/fragmentEditText1"
+        android:layout_alignStart="@+id/fragmentEditText1"
+        android:layout_marginTop="31dp"
+        android:spinnerMode="dropdown"
+        android:entries="@array/condition_array" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/fragmentLabel3"
+        android:id="@+id/fragmentSpinnerLabel"
+        android:layout_alignTop="@+id/fragmentSpinner"
+        android:layout_alignRight="@+id/fragmentLabel2"
+        android:layout_alignEnd="@+id/fragmentLabel2" />
+
+</RelativeLayout>
