--- a/app/src/main/res/layout/fragment_my_trades.xml
+++ b/app/src/main/res/layout/fragment_my_trades.xml
@@ -41,6 +41,7 @@
         android:id="@+id/button4"
         android:layout_alignTop="@+id/editText4"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="addTradeMarker"/>
 
 </RelativeLayout>
