--- a/app/src/main/res/layout/fragment_my_trades.xml
+++ b/app/src/main/res/layout/fragment_my_trades.xml
@@ -18,9 +18,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/button4"
-        android:layout_toStartOf="@+id/button4"
-        android:hint="@string/location_title_hint" />
+        android:layout_toStartOf="@+id/button6"
+        android:hint="@string/location_title_hint"
+        android:layout_toLeftOf="@+id/button6" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -30,18 +30,28 @@
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/button4"
-        android:layout_toStartOf="@+id/button4"
-        android:hint="@string/location_description_hint" />
+        android:layout_toStartOf="@+id/button6"
+        android:hint="@string/location_description_hint"
+        android:layout_toLeftOf="@+id/button6" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/location_button"
         android:id="@+id/button4"
-        android:layout_alignTop="@+id/editText4"
+        android:onClick="addTradeMarker"
+        android:layout_alignTop="@+id/editText2"
+        android:layout_toRightOf="@+id/editText2"
+        android:layout_toEndOf="@+id/editText2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button6"
+        android:onClick="viewTrades"
+        android:text="@string/view_markers_button"
+        android:layout_below="@+id/editText2"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="addTradeMarker"/>
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
