--- a/app/src/main/res/layout/fragment_trades_dialog.xml
+++ b/app/src/main/res/layout/fragment_trades_dialog.xml
@@ -1,12 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#b0b0ff"
     tools:context="com.virginia.cs.cs4720androidproject.TradesDialog">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/trades_listView"
-        android:layout_gravity="center" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-</FrameLayout>
+</RelativeLayout>
