--- a/app/src/main/res/layout/fragment_my_cards.xml
+++ b/app/src/main/res/layout/fragment_my_cards.xml
@@ -4,7 +4,7 @@
     tools:context="com.virginia.cs.cs4720androidproject.MyCardsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView android:layout_width="match_parent" android:layout_height="30dp"
         android:text="@string/my_cards_fragment_title"
         android:id="@+id/TextView"
         android:textSize="@dimen/abc_text_size_headline_material" />
@@ -14,12 +14,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
         android:hint="@string/add_item_text"
-        android:layout_marginTop="30dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/about_button"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
+        android:layout_toLeftOf="@+id/button"
+        android:layout_toStartOf="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
@@ -27,9 +26,9 @@
         android:text="@string/add_card_button"
         android:id="@+id/button"
         android:onClick="addCard"
-        android:layout_alignBottom="@+id/editText3"
-        android:layout_toRightOf="@+id/editText3"
-        android:layout_toEndOf="@+id/editText3" />
+        android:layout_below="@+id/about_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -38,7 +37,18 @@
         android:id="@+id/button3"
         android:onClick="viewCards"
         android:layout_below="@+id/button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/about_button"
+        android:id="@+id/about_button"
+        android:onClick="openAbout"
+        android:layout_toRightOf="@+id/editText3"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
