--- a/app/src/main/res/layout/fragment_my_trades.xml
+++ b/app/src/main/res/layout/fragment_my_trades.xml
@@ -4,35 +4,35 @@
     tools:context="com.virginia.cs.cs4720androidproject.MyTradesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView android:layout_width="match_parent" android:layout_height="30dp"
         android:text="@string/my_trades_fragment_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="@dimen/abc_text_size_headline_material" />
+        android:textSize="@dimen/abc_text_size_headline_material"
+        android:id="@+id/textView" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText2"
-        android:layout_marginTop="30dp"
-        android:layout_alignParentTop="true"
+        android:hint="@string/location_title_hint"
+        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/button6"
-        android:hint="@string/location_title_hint"
-        android:layout_toLeftOf="@+id/button6" />
+        android:layout_toLeftOf="@+id/button4"
+        android:layout_toStartOf="@+id/button4" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText4"
         android:width="100dp"
+        android:hint="@string/location_description_hint"
         android:layout_below="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/button6"
-        android:hint="@string/location_description_hint"
-        android:layout_toLeftOf="@+id/button6" />
+        android:layout_toLeftOf="@+id/button4"
+        android:layout_toStartOf="@+id/button4" />
 
     <Button
         android:layout_width="wrap_content"
@@ -40,9 +40,9 @@
         android:text="@string/location_button"
         android:id="@+id/button4"
         android:onClick="addTradeMarker"
-        android:layout_alignTop="@+id/editText2"
-        android:layout_toRightOf="@+id/editText2"
-        android:layout_toEndOf="@+id/editText2" />
+        android:layout_above="@+id/button6"
+        android:layout_alignRight="@+id/button6"
+        android:layout_alignEnd="@+id/button6" />
 
     <Button
         android:layout_width="wrap_content"
